Change PORT env var to FOREMAN_PORT to fix conflicts with Heroku's PORT.

--- a/spec/resources/export/systemd/app-alpha.2.service
+++ b/spec/resources/export/systemd/app-alpha.2.service
@@ -5,7 +5,7 @@ StopWhenUnneeded=yes
 [Service]
 User=app
 WorkingDirectory=/tmp/app
-Environment=PORT=5001
+Environment=FOREMAN_PORT=5001
 Environment=PS=alpha.2
 ExecStart=/bin/bash -lc 'exec -a "app-alpha.2" ./alpha'
 Restart=always
