--- a/spec/resources/export/supervisord/app-alpha-2.conf
+++ b/spec/resources/export/supervisord/app-alpha-2.conf
@@ -6,7 +6,7 @@ stdout_logfile=/var/log/app/alpha-1.log
 stderr_logfile=/var/log/app/alpha-1.error.log
 user=app
 directory=/tmp/app
-environment=PORT="5000"
+environment=FOREMAN_PORT="5000"
 
 [program:app-alpha-2]
 command=./alpha
@@ -16,7 +16,7 @@ stdout_logfile=/var/log/app/alpha-2.log
 stderr_logfile=/var/log/app/alpha-2.error.log
 user=app
 directory=/tmp/app
-environment=PORT="5001"
+environment=FOREMAN_PORT="5001"
 
 [group:app]
 programs=app-alpha-1,app-alpha-2
