--- a/spec/resources/export/systemd/app-alpha.1.service
+++ b/spec/resources/export/systemd/app-alpha.1.service
@@ -5,7 +5,7 @@ StopWhenUnneeded=yes
 [Service]
 User=app
 WorkingDirectory=/tmp/app
-Environment=PORT=5000
+Environment=FOREMAN_PORT=5000
 Environment=PS=alpha.1
 ExecStart=/bin/bash -lc 'exec -a "app-alpha.1" ./alpha'
 Restart=always
